# Nagami

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  clippy.toml  deny.toml
.agent/skills/: rust-code-simplification.md
docs/: API.md  ARCHITECTURE.md  ARCH_BOUNDARIES.md  BENCHS.md  BUILD.md  LAYOUT.md  PROTO.md
docs/web/: ARCHITECTURE.md  NOTES.md  PLAN.md
examples/: opus_stream_soak.rs  regen_fixtures.rs
misc/datasets/: .gitignore  get_speech_commands.sh
misc/etc/: config.toml  dev.toml  launch.toml
misc/heads/00000000-default/: head.mpk  labels.txt
misc/models/: .gitignore  get_tfjs_sc_model.sh
misc/npys/: logits_0.npy  logits_1.npy  logits_2.npy  logits_3.npy  logits_4.npy  probs_0.npy  probs_1.npy  probs_2.npy  probs_3.npy  probs_4.npy  spectrogram_0.npy  spectrogram_1.npy  spectrogram_2.npy  spectrogram_3.npy  spectrogram_4.npy  waveform_0.npy  waveform_1.npy  waveform_2.npy  waveform_3.npy  waveform_4.npy  window_blackman_2048.npy
misc/share/: .gitignore
modules/: api.rs  audio_buffer.rs  audio_io.rs  common.rs  config.rs  converter.rs  daemon.rs  dsp.rs  file_mgr.rs  inference.rs  lib.rs  model.rs  opus_stream.rs  preproc.rs  proto.rs  rknn_runtime.rs  sched.rs  status.rs  stream_io.rs  training.rs
modules/api/: error.rs  extract.rs  routes.rs  tests.rs
modules/api/routes/: active.rs  converter.rs  dataset.rs  heads.rs  health.rs  inference.rs  jobs.rs  mic.rs  status.rs  training.rs  workspace.rs
modules/audio_io/: mic_arbitrator.rs  mock.rs  source.rs
modules/audio_io/mic_arbitrator/: store.rs  tests.rs  types.rs
modules/audio_io/source/: alsa.rs  mock.rs
modules/common/: asset_path.rs  dims.rs  error.rs  head_header.rs  hex.rs  ids.rs  log_truncate.rs  time.rs  traits.rs  version.rs  workspace.rs
modules/common/traits/: head_store.rs  lag_source.rs
modules/config/: domain.rs  error.rs  handle.rs  launch.rs  mic_settings.rs  watcher.rs
modules/converter/: pipeline.rs  sink.rs  source.rs
modules/daemon/: drain_registry.rs  main_body.rs
modules/dsp/: resample.rs
modules/file_mgr/: active_head_writer.rs  asset.rs  cache.rs  dataset.rs  error.rs  fs_atomic.rs  fs_service.rs  head_rotation.rs  job_registry.rs  log_page.rs  metadata.rs  metrics_hooks.rs  mime.rs  recovery.rs  registry.rs  request_payload.rs  schema.rs  staging.rs  storage_reaper.rs  tests.rs  time_util.rs  uploader.rs  validate.rs
modules/inference/: backbone.rs  engine.rs  head.rs  kernel.rs  npy.rs
modules/preproc/: wav_io.rs
modules/proto/: audio_stream.proto  envelope.proto  framing.rs  inference_stream.proto
modules/rknn_runtime/: bindings.rs  error.rs  ffi.rs  infer.rs  session.rs  utils.rs
modules/status/: reporter.rs  workspace_metrics.rs
modules/stream_io/: framing.rs
modules/training/: finetune.rs  registry.rs
scripts/: build-wasm.sh  capture_baseline.sh  run_acousticsd.sh
src/: config.rs  error.rs  io.rs  lib.rs  lib_tests.rs  name_gen.rs  wasm.rs
src/generator/: core.rs  cost.rs  expr_emit.rs  literal_extract.rs  mod.rs  module_emit.rs  stmt_emit.rs  syntax.rs
src/generator/module_emit/: call_inline.rs  defer_vars.rs  local_resolve.rs  mod.rs  must_bind.rs  ref_counts.rs
src/generator/tests/: compound_assign.rs  dead_code.rs  expressions.rs  helpers.rs  miscompile_regressions.rs  mod.rs  names_and_output.rs  pipeline.rs  precedence.rs  roundtrip.rs  statements.rs  textures.rs  type_alias.rs  type_elision.rs
src/passes/: coalescing.rs  compact.rs  const_fold.rs  const_fold_tests.rs  const_hoist.rs  cse.rs  dead_branch.rs  dead_branch_tests.rs  dead_local.rs  dead_param.rs  emit_merge.rs  expr_util.rs  inlining.rs  load_dedup.rs  load_dedup_tests.rs  mod.rs  rename.rs  scoped_map.rs  struct_build.rs
src/pipeline/: context.rs  mod.rs  report.rs
tests/: active_head_endpoints.rs  audio_buffer_loom.rs  boot_recovery.rs  convert_pipeline.rs  daemon_lifecycle_row1_cold_boot.rs  daemon_lifecycle_row2_no_backbone.rs  daemon_lifecycle_row3_no_mic.rs  daemon_lifecycle_row6_sigterm_clean_shutdown.rs  daemon_lifecycle_row7_sigkill_respawn.rs  dataset_endpoints.rs  dependency_edge_guard.rs  job_inspection.rs  opus_stream_run_smoke.rs  preproc_diagnose.rs  preproc_parity.rs  preproc_window_source.rs  proto_snapshot_current.rs  request_payload_contracts.rs  status_counters.rs  stream_io_common_smoke.rs  stream_io_ws_e2e.rs  train_pipeline.rs  trained_head_rotation.rs  workspace_endpoints.rs
tests/api_fixtures/: mod.rs
tests/benches/: audio_buffer_ring_throughput.rs  baseline_3e88b4884893.json  inference_engine_run_window.rs  opus_stream_encode_frame.rs
tests/daemon_helpers/: mod.rs
tests/stream_io_helpers/: mod.rs
web/: .gitignore  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/public/: _headers  example.wgsl
web/src/: App.svelte  app.css  app.d.ts  app.html  main.ts
web/src/components/: CodePanel.svelte  FindBar.svelte  Header.svelte  OptionsPanel.svelte  StatsBar.svelte
web/src/lib/: filename.ts  highlight.ts  minify.worker.ts  nagami.ts  pwa.ts
web/src/lib/api/: endpoints.ts  http.ts  types.ts
web/src/lib/audio/: fft.ts
web/src/lib/components/: HealthBadge.svelte
web/src/lib/components/dashboard/: ActiveHeadCard.svelte  ConfigurationPanel.svelte  InferencePanel.svelte  SpectrogramCanvas.svelte  TopKMeter.svelte  VisualizationPanel.svelte  WaveformCanvas.svelte
web/src/lib/stores/: config.svelte.ts  health.svelte.ts  streams.svelte.ts
web/src/lib/stream/: client.ts  proto.ts  worker.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/converter/: +page.svelte
web/src/routes/workspace/: +page.svelte
web/vite-plugins/: seo-files.ts
