[package]
name = "acoustics-lab"
edition.workspace = true
version.workspace = true
publish = false

[lib]
name = "acoustics_lab"
path = "modules/lib.rs"

[[bin]]
name = "acousticsd"
path = "modules/bin/acousticsd.rs"

[dependencies]
thiserror = { workspace = true }
arc-swap = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
dashmap = { workspace = true }
time = { workspace = true, features = ["serde-human-readable", "macros"] }
# Narrow `tokio` to just the surface the daemon uses (drops
# `process`, `io-std`, `parking_lot`, `tracing`, `test-util` from
# the `full` umbrella -- none of those reach this crate).
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-util = { workspace = true, features = ["rt", "io"] }
tracing = { workspace = true }

clap = { version = "=4.6.1", features = ["derive"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing-appender = "=0.2.5"
anyhow = "=1.0.102"
# Optional global allocator for the binary; gated by the `mimalloc` feature.
mimalloc = { version = "=0.1.50", default-features = false, optional = true }

opus = "=0.3.1"
rubato = { workspace = true }
audioadapter-buffers = { workspace = true }
rustfft = "6"
realfft = "3"
hound = "3"

# Drop axum's `form` (no form-encoded bodies in any handler) and
# `original-uri` (no URL rewriting) defaults; keep the rest.
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "matched-path",
    "multipart",
    "query",
    "tokio",
    "tower-log",
    "tracing",
    "ws",
] }
hyper = "=1.9.0"
# `server-auto` (HTTP/1+2 dispatch) was dropped after the daemon's
# WebSocket-upgrade requirement pinned every UDS / TCP listener to
# HTTP/1.1; `serve_uds` now uses `hyper::server::conn::http1::Builder`
# directly, so we only need `server` (the hyper-util re-exports for
# `TokioIo` etc.) plus `tokio` and `service`.
hyper-util = { version = "=0.1.20", features = ["server", "tokio", "service"] }
libc = "=0.2.186"
futures-util = { workspace = true }

notify = "=8.2.0"
toml = { workspace = true }
# Drop sysinfo's `network`, `component`, `user` defaults; the
# daemon only samples process info, CPU, and disk usage.
sysinfo = { version = "=0.39.0", default-features = false, features = ["disk", "system"] }

burn = { workspace = true, features = ["std", "ndarray"] }
burn-ndarray = { version = "=0.21.0", default-features = false, features = ["std", "simd"] }

rayon = "1"
# No archive-parsing deps (`flate2`, `tar`, `zip`): dataset bytes
# flow through `POST /upload` (single-file) and live as
# daemon-owned files under `<workspace>/datasets/`; the trainer
# recursively walks the tree class-by-class with lazy per-batch
# FD opens.  Bulk loads use repeated single-file uploads.
nix = { workspace = true }
libloading = { version = "0.9", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
alsa = { version = "=0.11.0", optional = true }

[build-dependencies]
prost-build = "=0.14.3"

[dev-dependencies]
criterion = { workspace = true }
tokio-tungstenite = "=0.29.0"
# Test-only dev-dep for the storage-reaper unit tests that
# backdate fixture mtime past the sweep threshold.  Production
# code uses `SystemTime::now()` against on-disk mtime; it never
# *sets* mtime, so `filetime` does not need to reach the release
# binary.
filetime = "=0.2.28"
# `process` is a test-only feature (daemon-lifecycle tests spawn the
# binary as a subprocess via `tokio::process::Command`); not needed
# in the production daemon, so it's pinned to dev-deps rather than
# pulling extra surface into the release binary.
tokio = { workspace = true, features = ["test-util", "process"] }
tower = { workspace = true, features = ["util"] }
http-body-util = "=0.1.3"
urlencoding = "=2.1.3"
nix = { workspace = true, features = ["signal"] }
# Loom is used only by `tests/audio_buffer_loom.rs` (gated with
# `#![cfg(audio_buffer_loom)]`) and only when the Cargo build is
# invoked with `RUSTFLAGS=--cfg audio_buffer_loom`.  Lifted into a
# target-cfg dev-dep so a plain `cargo test` / `cargo check
# --tests` does NOT pull loom into the build graph -- otherwise
# the dependency was costing every contributor a full loom
# compile (~10-20 s + RAM) for a test they aren't running.  The
# custom cfg name (rather than the bare `loom` cfg) avoids
# tripping tokio's `#![cfg(not(loom))]` gates -- otherwise tokio's
# `net` module would be elided and tokio-tungstenite (a sibling
# dev-dep) would fail to compile in this build.  Pinned at 0.7
# for reproducibility; the model uses the stable surface
# (`loom::sync::atomic`, `loom::thread`, `loom::model`) that has
# been stable since 0.5.
[target.'cfg(audio_buffer_loom)'.dev-dependencies]
loom = "=0.7.2"

[[bench]]
name = "audio_buffer_ring_throughput"
path = "tests/benches/audio_buffer_ring_throughput.rs"
harness = false

[[bench]]
name = "inference_engine_run_window"
path = "tests/benches/inference_engine_run_window.rs"
harness = false

[[bench]]
name = "opus_stream_encode_frame"
path = "tests/benches/opus_stream_encode_frame.rs"
harness = false

[[example]]
name = "opus_stream_soak"

[[example]]
name = "regen_fixtures"

[features]
default = ["autodiff", "mimalloc"]
mimalloc = ["dep:mimalloc"]
alsa-real = ["dep:alsa"]
autodiff = ["burn/autodiff", "burn-ndarray/multi-threads"]
rknpu = ["dep:libloading"]
panic-inject = []

[lints]
workspace = true

[workspace]
resolver = "2"
members = []

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
tokio = "=1.52.3"
tokio-util = "=0.7.18"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", default-features = false, features = ["std", "registry"] }
thiserror = "=2.0.18"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
toml = "=1.1.2"
uuid = "=1.23.1"
time = "=0.3.47"
arc-swap = "=1.9.1"
parking_lot = { version = "=0.12.5", features = ["arc_lock"] }
dashmap = "=6.1.0"
bytes = "=1.11.1"
prost = "=0.14.3"
sha2 = "=0.11.0"
burn = { version = "=0.21.0", default-features = false }
rubato = "=2.0.0"
audioadapter-buffers = "=3.0.0"
axum = { version = "=0.8.9", default-features = false }
tower = "=0.5.3"
futures-util = "=0.3.32"
tempfile = "=3.27.0"
criterion = { version = "=0.8.2", default-features = false }
nix = { version = "=0.31.2", default-features = false, features = ["fs"] }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
debug-assertions = false
overflow-checks  = false

[profile.release-embedded]
inherits      = "release"
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
panic         = "unwind"
debug-assertions = false
overflow-checks  = false

[workspace.lints.clippy]
disallowed_types   = "warn"
disallowed_methods = "warn"
